objects/DR_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Account_CAB_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAB Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DR_ConfigurationsDnAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_FBO_EBiZ_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FBO/EBiZ Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DR_ConfigurationsDn9G</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Internal_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Control</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DR_ConfigurationsDn9a</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opty_CAB_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAB Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DR_ConfigurationsDnEz</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opty_FBO_EBiZ_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FBO/EBiZ Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DR_ConfigurationsDnBl</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opty_Internal_Control_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Control Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DR_ConfigurationsDnDX</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>DR_EBIZ_FBO_DR_Configuration</fullName>
        <filterScope>Queue</filterScope>
        <label>DR EBIZ/FBO</label>
        <queue>DR_EBIZ_FBO</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>